package com.marslps.AISafeFMS.model.enums;

public enum MaintenanceComponent {
    ENGINE,
    AIRFRAME,
    AVIONICS,
    INTERIOR,
    EXTERIOR;
}
